<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sornanun.binthabard.HomeActivity"
    tools:showIn="@layout/activity_home">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtuser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_alignParentTop="true"
            android:textColor="#ffffff"
            android:text="ยินดีต้อนรับ..."
            android:textSize="0dp"
            android:layout_alignParentLeft="true" />

        <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_below="@+id/gpsConnectionBox"
            app:rb_color="#ffca3a"
            app:rb_duration="3000"
            app:rb_radius="32dp"
            app:rb_rippleAmount="5"
            app:rb_scale="5">

            <ImageView
                android:id="@+id/centerImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:src="@drawable/open_off" />

            <TextView
                android:id="@+id/pressImageDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerImage"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:text="แตะที่รูปภาพเพื่อเปิดตำแหน่งของคุณ"
                android:textColor="#f2f2f2" />

        </com.skyfishjy.library.RippleBackground>

        <RelativeLayout
            android:id="@+id/positionDetail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/content"
            android:background="@drawable/button_radius"
            android:padding="10dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txtlatitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/txtlat"
                android:textSize="16dp"
                android:visibility="gone"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txtlongitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtlatitude"
                android:layout_marginTop="5dp"
                android:text="@string/txtlong"
                android:textSize="16dp"
                android:visibility="gone"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txtaddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtlongitude"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txttime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtaddress"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:layout_alignParentLeft="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/txtuser"
            android:id="@+id/internetConnectionBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_radius"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/internet_connection"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_alignParentLeft="true" />

            <ImageButton
                android:id="@+id/imgInternetStatus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_check" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/gpsConnectionBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/internetConnectionBox"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_radius"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/location_status"
                android:textSize="18dp"
                android:textColor="#000000"
                android:layout_alignParentLeft="true" />

            <ImageButton
                android:id="@+id/imgGPSStatus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_check" />

        </RelativeLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_logout" />

</RelativeLayout>
